# FastAPI

./: .dockerignore  .gitignore  README.md  api.dev.dockerfile  compose.yml  pyproject.toml
api/: api.dev.dockerfile  api.log.2024-12-27  api.log.2024-12-29  api.log.2025-01-01  api.log.2025-01-04  api.log.2025-01-10  api.log.2025-01-12
api/src/: api_handler.py  backend.dockerfile  handler.py  main.py  pyproject.toml
api/src/modules/database/: base.py  connection.py
api/src/modules/database/schema/: base.py  product.py  user.py
api/src/modules/domain/: base.py
api/src/modules/domain/request/: auth.py
api/src/modules/domain/response/: auth.py  base.py
api/src/modules/domain/schema/: base.py  users.py
api/src/modules/middleware/: auth.py  base.py  log.py  request.py
api/src/modules/queue/: base.py  booking.py  enums.py  models.py  schema.py  search.py
api/src/modules/repository/: base.py
api/src/modules/repository/queries/: auth.py  common.py  product.py  queue.py  user.py
api/src/modules/repository/request_models/: auth.py  base.py  booking.py  job.py  product.py  search.py  user.py
api/src/modules/repository/response_models/: auth.py  base.py  booking.py  job.py  product.py  search.py  user.py
api/src/modules/repository/schema/: base.py  booking.py  product.py  queue.py  user.py  users.py
api/src/modules/repository/validators/: base.py  validator.py
api/src/modules/routers/: auth.py  booking.py  google_auth.py  job.py  msoft.py  product.py  search.py  system.py  user.py  users.py
api/src/modules/security/: base.py  bearer.py  cache.py  current_user.py  dependency.py  device.py  ext_auth.py  location.py  login_attempt.py  mfa.py  msoft.py
api/src/modules/security/events/: authentication_event.py  base.py  email.py
api/src/modules/security/listeners/: base.py  email.py
api/src/modules/security/location/: base.py  strange_loc_login_event.py
api/src/modules/service/: auth.py  booking.py  database.py  device.py  email.py  google.py  job.py  mfa_auth.py  msoft.py  otp.py  product.py  queue.py  system.py  user.py  users.py  visa_client.py
api/src/modules/service/security/: base.py
api/src/modules/settings/: base.py  configuration.py
api/src/modules/templates/: base.html  confirm_registration.html  enquiry.html  new_device.html  reset_password.html  unknown_device.html  unsual_location.html  unusual_location.html
api/src/modules/utils/: misc.py
consumer/: README.md  requirements.txt  worker.dockerfile
consumer/env/: pyvenv.cfg
consumer/src/: run_worker.py
consumer/src/booking/: base.py
consumer/src/config/: settings.py
consumer/src/models/: base.py  enums.py  misc.py
consumer/src/rabbitmq/: base.py
consumer/src/search/: base.py
consumer/src/worker/: base.py
data/: product.json  products.json
worker/: requirements.txt  worker.dockerfile
worker/env/: pyvenv.cfg
worker/src/booking/: base.py
worker/src/config/: settings.py
worker/src/models/: base.py  enums.py  misc.py
worker/src/modules/config/: settings.py
worker/src/modules/models/: enums.py
worker/src/modules/queue/: base.py
worker/src/modules/worker/: base.py
worker/src/queue/: base.py
worker/src/rabbitmq/: base.py
worker/src/search/: base.py
worker/src/worker/: base.py
